# flickypedia

./: .coveragerc  .gitattributes  .gitignore  LICENSE-MIT  README.md  dev_requirements.in  dev_requirements.txt  flickr_users.json  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.py  store_cookies.py  urls.txt  wikidata_flickr_entities.json
.github/workflows/: eslint.yml  jslint.yml  test.yml
docs/: README.md  create-an-oauth-application.md  how-to-run-backfillr-bot.md
docs/adrs/: 01-choose-python-and-flask.md  02-wikimedia-authentication.md
duplicate_detection/: README.md  download_snapshot.py  find_flickr_ids_in_sdc_snapshot.py  test_download_snapshot.py
duplicates_from_sdc/: README.md  csv_to_sqlite.py  find_flickr_ids_in_sdc_snapshot.py
scripts/: README.md  ensure_tailscale_running.sh  functions.sh  restart_prod.sh  start_prod.sh
src/flickypedia/: __init__.py  app.py  auth.py  cli.py  config.py  duplicates.py  forms.py  fs_queue.py  photos.py  routes.py  tasks.py  types.py  uploads.py  utils.py
src/flickypedia/apis/: __init__.py  _types.py  flickr.py  flickr_user_ids.py  languages.py  snapshots.py  structured_data.py  wikidata.py  wikimedia.py  wikitext.py
src/flickypedia/backfillr/: __init__.py  actions.py  backfillr.py  backfillr_queue.py  cli.py  comparisons.py  flickr_matcher.py
src/flickypedia/extractr/: README.md  __init__.py  cli.py  matcher.py
src/flickypedia/pages/: __init__.py  find_photos.py  prepare_info.py  select_photos.py
src/flickypedia/static/: flickypedia.js  phk3iud.css  style.css  style.scss
src/flickypedia/structured_data/: __init__.py  claims.py  flickr_users.py  structured_data.py  wikidata.py  wikidata_entities.py  wikidata_properties.py
src/flickypedia/templates/: _flashes.html  _footer.html  about.html  base.html  bookmarklet.html  find_photos.html  get_photos.html  homepage.html  index.html  prepare_info.html  progress.html  select_photos.html  upload_complete.html  upload_images.html  upload_photos.html  wait_for_upload.html
src/flickypedia/types/: __init__.py  flickr.py  structured_data.py  uploads.py  wikimedia.py
src/flickypedia/uploadr/: __init__.py  auth.py  caching.py  cli.py  config.py  fs_queue.py  tasks.py  uploads.py
src/flickypedia/views/: __init__.py  _types.py  api.py  find_photos.py  get_photos.py  prepare_info.py  say_thanks.py  select_photos.py  upload_complete.py  wait_for_upload.py
systemd/: flickypedia-gunicorn.service  flickypedia-upload-worker.service
tests/: conftest.py  test_app.py  test_auth.py  test_auth_can_log_in.py  test_duplicates.py  test_fs_queue.py  test_photos.py  test_tasks.py  test_uploads.py  test_utils.py  utils.py
tests/apis/: test_create_structured_data.py  test_flickr.py  test_flickr_comments_api.py  test_flickr_photos_api.py  test_flickr_user_ids.py  test_parse_structured_data.py  test_snapshots.py  test_structured_data.py  test_types.py  test_wikidata.py  test_wikimedia.py  test_wikimedia_languages.py  test_wikimedia_url_parser.py  test_wikitext.py
tests/apis/flickr_photos_api/: test_api.py  test_utils.py
tests/apis/structured_data/: test_parse_structured_data.py  test_structured_data.py  test_types.py  test_wikidata.py
tests/apis/wikimedia/: test_category_methods.py  (+8 more)
tests/backfillr/: test_actions.py  test_backfillr.py  test_backfillr_cli.py  test_comparisons.py  test_flickr_matcher.py
tests/components/: test_prepare_info_flickr_photo_info.py  test_select_photos_message.py  test_structured_data_preview.py
tests/fixtures/: commons-20231207-mediainfo.slice.json.bz2
tests/pages/: test_find_photos.py  test_select_photos.py  test_select_photos_description.py  test_select_photos_message.py
tests/structured_data/: test_claims.py  test_flickr_user_ids.py  test_structured_data.py  test_types.py  test_wikidata.py  test_wikidata_properties.py
tests/stubs/: authlib.integrations.httpx_client.pyi  authlib.oauth2.rfc6749.wrappers.pyi  flask_login.pyi  flask_wtf.pyi  pywikibot.comms.http.pyi  pywikibot.pyi  sass.pyi  vcr.pyi
tests/types/: test_structured_data_types.py  test_types.py
tests/uploadr/: test_app.py  test_auth.py  test_auth_can_log_in_to_flickr.py  test_auth_can_log_in_to_wikimedia.py  test_cli.py  test_fs_queue.py  test_tasks.py  test_uploads.py
tests/views/: test_api.py  test_find_photos.py  test_get_photos.py  test_prepare_info.py  test_select_photos.py  test_select_photos_message.py  test_views.py
(+578 files in other folders)
