[build-system]
requires = [
    "setuptools >= 65",
]
build-backend = "setuptools.build_meta"

[project]
name = "flickypedia"
authors = [
  {name = "Flickr Foundation", email = "hello@flickr.org"},
]
maintainers = [
  {name = "Alex Chan", email="alex@flickr.org"},
]
requires-python = ">=3.12"
dynamic = ["dependencies", "version"]

[project.urls]
"Homepage" = "https://github.com/Flickr-Foundation/flickypedia"

[project.scripts]
flickypedia = "flickypedia.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flickypedia = ["static", "templates"]

[tool.coverage.run]
branch = true
source = [
  "flickypedia",
  "tests",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 96
exclude_also = [
  "raise NotImplementedError",
  "@abc.abstractmethod",
]

[tool.pytest.ini_options]
filterwarnings = [
  "error",

  # This hides a deprecation warning in flask_login:
  #
  #     flask_login/utils.py:130: DeprecationWarning: 'werkzeug.urls.url_encode'
  #     is deprecated and will be removed in Werkzeug 2.4.
  #
  #     Use 'urllib.parse.urlencode' instead.
  #
  # There's a fix for this in flask-login, but there's no new version yet:
  # https://github.com/maxcountryman/flask-login/pull/746
  #
  # When we upgrade to a version of flask-login that includes
  # this fix (>0.6.2), we can remove this filter.
  "ignore::DeprecationWarning:flask_login*:",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
