[build-system]
requires = [
    "setuptools >= 65",
]
build-backend = "setuptools.build_meta"

[project]
name = "flickypedia"
authors = [
  {name = "Flickr Foundation", email = "hello@flickr.org"},
]
maintainers = [
  {name = "Alex Chan", email="alex@flickr.org"},
]
requires-python = ">=3.12"
dynamic = ["dependencies", "version"]

[project.urls]
"Homepage" = "https://github.com/Flickr-Foundation/flickypedia"

[project.scripts]
flickypedia = "flickypedia.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flickypedia = ["static", "templates"]

[tool.coverage.run]
branch = true
source = [
  "flickypedia",
  "tests",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 96
exclude_also = [
  "raise NotImplementedError",
  "@abc.abstractmethod",
]

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.mypy]
mypy_path = "src"
strict = true

[tool.interrogate]
# fail_under = 100
fail_under = 27
omit-covered-files = true
