[build-system]
requires = [
    "setuptools >= 65",
]
build-backend = "setuptools.build_meta"

[project]
name = "flickypedia"
authors = [
  {name = "Flickr Foundation", email = "hello@flickr.org"},
]
maintainers = [
  {name = "Alex Chan", email="alex@flickr.org"},
]
requires-python = ">=3.12"
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/Flickr-Foundation/flickypedia"

[project.scripts]
flickypedia = "flickypedia.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flickypedia = ["static", "templates"]

[tool.coverage.run]
branch = true
source = [
  "flickypedia",
  "tests",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 96
exclude_also = [
  "raise NotImplementedError",
  "@abc.abstractmethod",
]

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  #
  # We're getting a warning in Python 3.13 about unclosed SQLite databases.
  # Ideally we should just close them, but I haven't worked out how to
  # do that so just suppressing the warning for now.
  "ignore:unclosed database in <sqlite3.Connection:ResourceWarning",
]

[tool.mypy]
mypy_path = "src"
strict = true

[tool.interrogate]
# fail_under = 100
fail_under = 28
omit-covered-files = true
